VarDictJava inherited Perl version static procedural structure. In this release huge refactoring was provided. At the top level refactoring includes following steps: Scopes decomposition Method decomposition Data aggregation Global scope extraction Entities extraction Data flow rerouting Extraction of Modules entities Pipeline organisation Extraction of Modes entities
 Also, custom htsjdk version was applied in the VarDict release 2.0, it includes new cache feature for bam-files.